2006-09-10  Sven Neumann  <sven@gimp.org>

	* app/errors.c
	* app/gui/gui-vtable.c: minor cleanup.

2006-09-09  Jakub Steiner <jimmac@ximian.com>

	* themes/Default/images/tools/stock-tool-perspective*.xcf:
	forgot to add the source XCFs

2006-09-09  Michael Natterer  <mitch@gimp.org>

	* app/paint/gimpclone.c (gimp_clone_line_image): changed src_pickable
	parameter to src_type.

	(gimp_clone_motion): allow the passed srcPR to have alpha even if
	the source pickable is flat. Pass the correct GimpImageType to
	gimp_clone_line_image().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/app_procs.c
	* app/errors.[ch]: moved some code from app_run() to errors_init().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/app_procs.[ch]
	* app/main.c: initialize the error subsystem after the gimp object
	has been created.

	* app/errors.[ch]: store a reference to the gimp object (eek) and
	use it to call gimp_gui_ungrab() before g_on_error_query().

	* app/core/gimp-gui.[ch]
	* app/gui/gui-vtable.c: added gimp_gui_ungrab().

2006-09-09  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/emboss.c: hopefully really fixed bug #353227
	this time.

2006-09-09  Sven Neumann  <sven@gimp.org>

	* app/dialogs/about-dialog.c: added missing include.

	* app/display/display-enums.[ch]
	* app/dialogs/preferences-dialog.c: changed labels for
	"space-bar-action" preference. Suggestions welcome for further
	improvements.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: reorder includes to avoid preprocessor
	symbol redefinition warnings.

2006-09-08  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-drawable.c
	* plug-ins/pygimp/pygimp-pdb.c: #define NO_IMPORT_PYGOBJECT, so
	the internal pygobject API symbol is only defined once.

2006-09-08  Sven Neumann  <sven@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: use coordinates from
	the current device when starting to scroll. Grab the keyboard and